# porosity-detect

./: README.md  analyze_roi.py  porosity_gui.py
Downloads/Porosity Trial 2/porosity-detect/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  annotate.py  pyproject.toml  sweep.py  train_real.py
Downloads/Porosity Trial 2/porosity-detect/.github/workflows/: ci.yml
Downloads/Porosity Trial 2/porosity-detect/porosity_detect/: __init__.py  classical.py  cli.py  features.py  hybrid.py  metrics.py  ml_model.py  synthetic.py  two_pass.py  visualization.py
Downloads/Porosity Trial 2/porosity-detect/tests/: test_pipeline.py
