[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "porosity-detect"
version = "0.1.0"
description = "Hybrid Classical + ML void/porosity detection for optical microscopy of aerospace materials"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Dinusha", email = "your.email@example.com"},
]
keywords = [
    "materials science",
    "materials informatics",
    "porosity detection",
    "void detection",
    "image analysis",
    "microscopy",
    "aerospace",
    "machine learning",
    "NDT",
    "quality control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
porosity-detect = "porosity_detect.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/porosity-detect"
Documentation = "https://github.com/yourusername/porosity-detect#readme"
Issues = "https://github.com/yourusername/porosity-detect/issues"
